# test2

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
app/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
include/: developer.hpp  junior_developer.hpp  senior_developer.hpp
lib/: CMakeLists.txt  Developer.cpp  JuniorDeveloper.cpp  SeniorDeveloper.cpp
lib/include/: Developer.h  JuniorDeveloper.h  SeniorDeveloper.h
logos/: junior.txt  senior.txt
main/: CMakeLists.txt
src/: CMakeLists.txt  Developer.cpp  JuniorDeveloper.cpp  Makefile  SeniorDeveloper.cpp  cmake_install.cmake
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  developer_test  developer_test.cpp  developer_test[1]_include.cmake  developer_test[1]_tests.cmake
